--- a/src/style.css
+++ b/src/style.css
@@ -7,7 +7,7 @@ h1{
   font-family: 'Ubuntu', sans-serif;
   font-size: 4.5em;
   text-transform: uppercase;
-	background: linear-gradient(to right, #30CFD0 0%, #330867 100%);
+	background: linear-gradient(to right, #DB4437 0%, #F4B400 100%);
 	-webkit-background-clip: text;
 	-webkit-text-fill-color: transparent;
  
